# concensus-sft

./: .gitignore  README.md  inference.py  pyproject.toml  requirements-scitldr.txt  requirements.txt
configs/: default.yaml  high_accuracy.yaml  low_latency.yaml  small_high_accuracy_mps.yaml
configs/consensus/: clean_fit.yaml  clean_fit_end.yaml  clean_fit_end_es.yaml  clean_fit_end_es_rouge.yaml  clean_fit_end_es_rouge_long.yaml  seed_sweep_base.yaml
configs/scitldr/: scitldr_small.yaml
data/: augment_paraphrases.py  process_data.py  process_data_sft.py  process_data_sft_clean.py  sample_for_review.py
data/input_datasets/: inference_data.csv
data/source_materials/: project_brief.docx  training_data.csv
docs/: architecture.md  diagrams.md  etl_notes.md  evaluation_guidance.md  failure_modes.md  interview_prep.md  learning_path.md  learning_summary.md  metrics_definitions.md  reference_papers.md  sft_review_notes.md  study_checklist.md
mle_tech_assessment/: Consensus Technical Assessment Instructions.docx  data_dictionary.xlsx
models/: evaluation.py  train.py
models/datasets/: inference_results.csv  test_predictions.csv
models/utils/: build_torch_dataset.py
reports/: error_analysis_template.md  eval_metrics_summary.json  experiment_report.md  model_card.md  results_template.md  tracking_template.md
scripts/: ablation_compare.py  benchmark_inference.py  eval_model.py  export_onnx.py  faithfulness_nli.py  infer.py  log_metrics.py  onnx_runtime_infer.py  plot_pareto.py  seed_sweep.py  train.py
tests/: test_data.py  test_metrics.py
(+12 files in other folders)
